[package]
name = "babe-consensus-data-provider"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
# Substrate
#parity-scale-codec = { workspace = true, features = ["derive", "std"] }
sp-api = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0", features = ["std"] }
sp-application-crypto = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sp-core = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0", features = ["std"] }
sp-keystore = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sp-runtime = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sp-consensus-babe = { features = ["serde"], git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
scale-info = { workspace = true}
sc-service = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sc-client-api = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sc-consensus-babe = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sp-inherents = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0", features = ["default"] }
# Other
schnorrkel = { version = "0.11.4", default-features = false, features = [
    "preaudit_deprecated",
] }

fc-rpc = { git="https://github.com/ChainSupport/frontier.git", branch="release-polkadot-v1.13.0", features = [
    "rpc-binary-search-estimate",
    "txpool",
] }


# Polkadot
#polkadot-primitives = { workspace = true }

# Other
#schnorrkel = { workspace = true, default-features = false, features = [
#    "preaudit_deprecated",
#] }



[lints]
workspace = true
