[package]
name = "babe-consensus-data-provider"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
# Substrate
#parity-scale-codec = { workspace = true, features = ["derive", "std"] }
sp-api = { workspace = true, features = ["std"] }
sp-application-crypto = { workspace = true }
sp-core = { workspace = true, features = ["std"] }
sp-keystore = { workspace = true }
sp-runtime = { workspace = true }
sp-consensus-babe = { features = ["serde"], workspace = true }
scale-info = { features = ["derive", "serde"], workspace = true }
sc-service = { workspace = true }
sc-client-api = { workspace = true }
sp-inherents = { workspace = true, features = ["default"] }

fc-rpc = { workspace = true, features = [
    "rpc-binary-search-estimate",
    "txpool",
] }


# Polkadot
#polkadot-primitives = { workspace = true }

# Other
#schnorrkel = { workspace = true, default-features = false, features = [
#    "preaudit_deprecated",
#] }



[lints]
workspace = true
