[package]
name = "ecdsa-keyring"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
strum = { version = "0.26.3", features = ["derive"], default-features = false }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
fp-account = { workspace = true }

[features]
default = ["std"]
std = ["sp-core/std", "sp-runtime/std", "strum/std", "fp-account/std"]

[lints]
workspace = true

