[package]
name = "staging-node-inspect"
version = "0.12.0"
authors.workspace = true
description = "Substrate node block inspection tool."
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.6.12" }
thiserror = { workspace = true }


sc-cli = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sc-client-api = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sc-service = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0", default-features = false }
sp-blockchain = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sp-core = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sp-io = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sp-runtime = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sp-statement-store = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }

[features]
runtime-benchmarks = [
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
