[package]
name = "node-rpc"
version = "3.0.0-dev"
authors.workspace = true
description = "Substrate node rpc methods."
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpsee = { version = "0.22", features = ["server"] }
# kitchensink-mainnet-runtime = { path = "../../runtime/mainnet", optional = true }
# kitchensink-testnet-runtime = { path = "../../runtime/testnet", optional = true }
common-runtime = {path = "../../runtime/common"}

fp-rpc = { workspace = true,  features = ["std"]}
fc-api = { workspace = true}
fc-mapping-sync = { workspace = true}
fc-storage = { workspace = true}
fc-rpc-core = { workspace = true}
fc-rpc = { workspace = true}

sc-network = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sp-core = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sp-inherents = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sc-network-sync = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sc-transaction-pool = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sp-consensus-aura = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
pallet-transaction-payment-rpc = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
mmr-rpc = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sc-chain-spec = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sc-client-api = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sc-consensus-babe = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sc-consensus-babe-rpc = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sc-consensus-beefy = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sc-consensus-beefy-rpc = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sp-consensus-beefy = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sc-consensus-grandpa = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sc-consensus-grandpa-rpc = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sc-mixnet = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sc-rpc = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sc-rpc-api = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sc-rpc-spec-v2 = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sc-sync-state-rpc = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sc-transaction-pool-api = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sp-api = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sp-block-builder = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sp-blockchain = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sp-consensus = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sp-consensus-babe = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sp-keystore = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sp-runtime = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sp-application-crypto = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
sp-statement-store = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
substrate-frame-rpc-system = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }
substrate-state-trie-migration-rpc = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0" }