[package]
name = "kitchensink-mainnet-runtime"
version = "3.0.0-dev"
authors.workspace = true
description = "Substrate node kitchensink runtime."
edition.workspace = true
build = "build.rs"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# third-party dependencies
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { version = "2.11.1", default-features = false, features = ["derive", "serde"] }
static_assertions = "1.1.0"
log = { workspace = true }
serde_json = { features = ["alloc", "arbitrary_precision"], workspace = true }

# pallet-asset-conversion: turn on "num-traits" feature
primitive-types = { version = "0.12.0", default-features = false, features = ["codec", "num-traits", "scale-info"] }

polkadot-sdk = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0", features = ["runtime", "tuples-96"], default-features = false }

# shared code between runtime and node
node-primitives = { path = "../../node/primitives", default-features = false }

pallet-balances = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0", default-features = false, features = ["insecure_zero_ed"] }

# Frontier
fp-account = { workspace = true, features = ["serde"] }
fp-evm = { workspace = true, features = ["serde"] }
fp-rpc = { workspace = true }
fp-self-contained = { workspace = true, features = ["serde"] }
# Frontier FRAME
pallet-base-fee = { workspace = true }
pallet-dynamic-fee = { workspace = true }
pallet-ethereum = { workspace = true }
pallet-evm = { workspace = true }
pallet-evm-chain-id = { workspace = true }
pallet-evm-precompile-modexp = { workspace = true }
pallet-evm-precompile-sha3fips = { workspace = true }
pallet-evm-precompile-simple = { workspace = true }


[build-dependencies]
substrate-wasm-builder = { git="https://github.com/paritytech/polkadot-sdk", branch="release-polkadot-v1.13.0", optional = true }

[features]
default = ["std", "insecure_zero_ed"]
insecure_zero_ed = [
	"pallet-balances/insecure_zero_ed",
]
with-tracing = ["polkadot-sdk/with-tracing"]
std = [
	"codec/std",
	"log/std",
	"node-primitives/std",
	"polkadot-sdk/std",
	"primitive-types/std",
	"scale-info/std",
	"serde_json/std",
	"substrate-wasm-builder",
	# Frontier
	"fp-account/std",
	"fp-evm/std",
	"fp-rpc/std",
	"fp-self-contained/std",
	# Frontier FRAME
	"pallet-base-fee/std",
	"pallet-dynamic-fee/std",
	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-evm-chain-id/std",
	"pallet-evm-precompile-modexp/std",
	"pallet-evm-precompile-sha3fips/std",
	"pallet-evm-precompile-simple/std",
]
runtime-benchmarks = [
	"polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
	"polkadot-sdk/try-runtime",
]

metadata-hash = ["substrate-wasm-builder/metadata-hash"]
